test/must_fail/api/must_fail_file_read_args.ref
error: file_read(path) require exactly 1 arguments but 2 was given
  [must_fail_file_read_args.ngjs:0:0] in <anonymous>()
    file_read('asdf', 'zzz');
    ^

hint: function 'file_read(path)' was called with 2 arguments
hint: argument #0 was asdf (string)
hint: argument #1 was zzz (string)

Stack trace (1 frames):
  [must_fail_file_read_args.ngjs:0:0] in <anonymous>()
    file_read('asdf', 'zzz');
    ^

exit(7)
