test/must_fail/api/must_fail_file_read_args.ngjs
#!/usr/bin/env ngspicejs
// one string arg needed
// linter: ngspicejs-lint
"use strict";

file_read('asdf', 'zzz');
